added end game functions

--- a/css/app.css
+++ b/css/app.css
@@ -63,6 +63,7 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    transition: all .2s;
 }
 
 .deck .card.open {
@@ -79,6 +80,9 @@ h1 {
     cursor: default;
     background: #02ccba;
     font-size: 33px;
+
+    animation-name: rubberBand;
+    animation-duration: 1s;
 }
 
 /*
@@ -101,6 +105,7 @@ h1 {
 .score-panel .stars li {
     list-style: none;
     display: inline-block;
+    color: #f2b01e;
 }
 
 .score-panel .restart {
@@ -113,9 +118,9 @@ h1 {
 }
 
 /* Styles for the modal */
-
 .modal {
     display: none; /* Hidden by default */
+    margin: 0 auto;
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 100px; /* Location of the box */
@@ -143,6 +148,9 @@ h1 {
     float: right;
     font-size: 28px;
     font-weight: bold;
+    position: absolute;
+    top: -25px;
+    left: 100%;
 }
 
 .close:hover,
@@ -151,3 +159,132 @@ h1 {
     text-decoration: none;
     cursor: pointer;
 }
+
+.stats {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.finalMessage {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.score {
+    display: flex;
+}
+
+.finalScore {
+    list-style: none;
+    display: flex;
+    color: #f2b01e;
+    margin-left: 2px;
+}
+
+.stats .finalStars .finalScore .hide {
+    display: none;
+}
+
+.finalStars {
+    display: flex;
+}
+
+.message {
+    font-size: 30px;
+    margin: 0 auto;
+    margin-bottom: 25px;
+}
+
+.modal-restart {
+    position: absolute;
+    top: -13.5px;
+    left: 97%;
+}
+
+/* 
+Animations 
+- code found at https://github.com/daneden/animate.css/blob/master/animate.css
+*/
+@-webkit-keyframes rubberBand {
+    from {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+
+    30% {
+        -webkit-transform: scale3d(1.25, 0.75, 1);
+        transform: scale3d(1.25, 0.75, 1);
+    }
+
+    40% {
+        -webkit-transform: scale3d(0.75, 1.25, 1);
+        transform: scale3d(0.75, 1.25, 1);
+    }
+
+    50% {
+        -webkit-transform: scale3d(1.15, 0.85, 1);
+        transform: scale3d(1.15, 0.85, 1);
+    }
+
+    65% {
+        -webkit-transform: scale3d(0.95, 1.05, 1);
+        transform: scale3d(0.95, 1.05, 1);
+    }
+
+    75% {
+        -webkit-transform: scale3d(1.05, 0.95, 1);
+        transform: scale3d(1.05, 0.95, 1);
+    }
+
+    to {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+    @keyframes rubberBand {
+    from {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+
+    30% {
+        -webkit-transform: scale3d(1.25, 0.75, 1);
+        transform: scale3d(1.25, 0.75, 1);
+    }
+
+    40% {
+        -webkit-transform: scale3d(0.75, 1.25, 1);
+        transform: scale3d(0.75, 1.25, 1);
+    }
+
+    50% {
+        -webkit-transform: scale3d(1.15, 0.85, 1);
+        transform: scale3d(1.15, 0.85, 1);
+    }
+
+    65% {
+        -webkit-transform: scale3d(0.95, 1.05, 1);
+        transform: scale3d(0.95, 1.05, 1);
+    }
+
+    75% {
+        -webkit-transform: scale3d(1.05, 0.95, 1);
+        transform: scale3d(1.05, 0.95, 1);
+    }
+
+    to {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+.rubberBand {
+-webkit-animation-name: rubberBand;
+animation-name: rubberBand;
+}
+
+  
