--- a/css/app.css
+++ b/css/app.css
@@ -124,7 +124,7 @@ h1 {
     margin-left: -20px;
 }
 
-/* Styles for the modal */
+/* Styles for the modal - found https://www.w3schools.com/howto/howto_css_modals.asp */
 .modal {
     display: none; /* Hidden by default */
     margin: 0 auto;
